--- a/运维篇.md
+++ b/运维篇.md
@@ -68,6 +68,14 @@ location / {
 }
 ```
 
+### unix
+
+常用 unix 命令如下：
+
+```
+sudo、cat、pwd、cd、ls、chmod、cp、mv、man、rm -rf、who、in、find、grep、ssh、ping
+```
+
 ### 版本号
 
 使用 semver 的版本号规则：
