--- a/算法篇.md
+++ b/算法篇.md
@@ -2,6 +2,8 @@
 
 ### 基础
 
+各种数据类型：
+
 ```
 数组：数组支持高效的读和写操作，但是在插入和删除操作的时候性能很低
 链表：为了解决数组插入和删除低效的问题，出现了链表，但是链表的读操作性能很低
@@ -13,6 +15,18 @@
 二叉搜索树：左子树上的所有节点都小于右子树上的所有节点
 图：图是一种能够指回父节点的树
 ```
+
+十大排序算法：冒泡排序、选择排序、插入排序、希尔排序、归并排序、快速排序、堆排序、计数排序、桶排序、基数排序。
+
+冒泡排序：遍历数据，每次遍历比较相邻元素的大小，把小的放前面，直到没有操作为止
+
+选择排序：遍历数据，每次选择最小的那个拿出来放入另一个数组
+
+插入排序：从左到右遍历，每次把元素插入到左边合适的位置
+
+归并排序：每次二等分，然后分别排序，递归，最后归并
+
+快速排序：调出一个基准，把大于和小于它的数分成2份，递归，然后归并
 
 ### 代码模板
 
