--- a/算法篇.md
+++ b/算法篇.md
@@ -121,4 +121,37 @@ function binarySearch(array, target) {
         }
     }
 }
+
+// 前序遍历
+function preOrder(root, arr) {
+    if (root == null) {
+        return;
+    }
+
+    arr.push(root.val);
+    preOrder(root.left, arr);
+    preOrder(root.right, arr);
+}
+
+// 中序遍历
+function midOrder(tree) {
+    if (root == null) {
+        return;
+    }
+
+    midOrder(root.left, arr);
+    arr.push(root.val);
+    midOrder(root.right, arr);
+}
+
+// 后序遍历
+function afterOrder(tree) {
+    if (root == null) {
+        return;
+    }
+
+    preOrder(root.left, arr);
+    preOrder(root.right, arr);
+    arr.push(root.val);
+}
 ```
