--- a/浏览器工作原理与实践.md
+++ b/浏览器工作原理与实践.md
@@ -37,7 +37,7 @@ console.log('解释dom树耗时: ', timing.domComplete - timing.domInteractive);
 console.log('从开始至load总耗时: ', timing.loadEventEnd - timing.navigationStart);
 ```
 
-4.从输入 url 到页面展示：会首先处理用户输入，判断输入的是搜索内容还是请求的url
+4.从输入 url 到页面展示：会首先做两件事情，第一个是对当前打开的页面执行一次beforeunload事件，然后处理用户输入，判断输入的是搜索内容还是请求的url。
 
 5.浏览器收到请求后：1.重定向；2.响应数据类型处理；3.准备渲染进程；4.把 html 数据提交给渲染进程（更新前进后退状态；更新安全状态；更新地址栏url；更新web页面）；5.渲染阶段（完成后会停止标签图标上的加载动画）
 
@@ -74,3 +74,211 @@ console.log('从开始至load总耗时: ', timing.loadEventEnd - timing.navigati
 10.this: 在对象内部的方法中访问对象的内部属性是一个非常普遍的需求，基于这个需求，javascript 搞出来一套 this 机制。this 被绑定在执行上下文中。（执行上下文：变量环境、词法环境、outer、this）
 
 11.this有一个严重的失误，就是嵌套函数的this不会继承外部的this，所以要使用self或者箭头函数（它没有自己的执行上下文）。
+
+12.活动对象：一般的变量环境（也就是变量对象）是不可访问的，但是在执行的时候，当执行到这个上下文的时候，变量对象变为了活动对象成为可访问的状态。
+
+13.暂存性死区：词法环境是用来储存let 和 const变量的，它们虽然没有变量提升（声明+初始化阶段被提升），但是它的声明阶段是被提升了的，这个时候，在它们被初始化并赋值之前，它们是无法访问或者重新声明的（Uncaught ReferenceError: Cannot access 'a' before initialization），这种状态就叫做暂存性死区。
+
+### V8 工作原理
+
+1.支持隐式类型转换的语言称为弱类型语言，不支持隐式类型转换的语言成为强类型语言。
+
+2.javascript 是一种弱类型、动态的语言。弱类型是指它支持隐式类型转换；动态是可以用同一个变量保存不同的类型。
+
+3.javascript 的内存空间：代码空间、栈空间和堆空间。
+
+4.闭包原理：当编译器执行到外部函数的时候，会对内部做一次**预扫描**，如果扫描到闭包的话，就会把闭包引用的变量保存到closure对象里面去，然后把这个对象放到**堆里面**（即使引用的是基本类型，还是会存放到堆里面去。另外闭包是放在外层函数的变量环境中，而不是内层函数的变量环境中）。
+
+5.垃圾回收：栈中的变量在执行结束之后，从执行上下文中直接销毁；堆中的变量就需要使用垃圾回收器来进行回收了。
+
+6.在V8中，会把堆分为新生代和老生代两个区域，新生代内存小，主要存放生存时间短的对象；老生代内存大，主要存放生存时间长或者占用内存大的对象。
+
+7.垃圾回收器的一般流程：标记空间中的活动对象和非活动对象；回收非活动对象所占的内存；最后做内存整理。
+
+8.新生代的垃圾回收使用Scavenge算法，主要是把新生代的区域分隔成两份，然后把里面的对象在整理的时候复制到另一份里面去，就这样不停地翻转的过程。
+
+9.老生代的垃圾回收使用标记-清除算法进行回收，然后使用标记-整理算法进行整理。
+
+10.全停顿：V8会定时把主线程的脚本停下来，做一次垃圾回收，然后再恢复脚本执行。由于垃圾回收的耗时可能会很长，所以它使用增量标记算法把过程分为多个小的子任务间断执行。
+
+11.V8执行 javascript 的过程（这种技术称为字节码 + JIT即时编译技术）：
+
+```
+1.生成抽象语法树和执行上下文。（词法分析、语法分析）
+2.使用解释器 Ignition 生成字节码。（对热点代码，就是多次执行的代码使用编译器 TurboFan 编译为高效的机器码）
+3.执行代码。（使用解释器 Ignition 逐条执行字节码，或者直接执行机器码）
+```
+
+12.优化 javascript 性能的一些策略（中心主要在缩短单次脚本的执行时间和脚本的网络加载上）：
+
+```
+1.提升单次脚本的执行速度（避免一直占用主线程影响交互）。
+2.避免大的内联脚本（解析和编译会占用主线程）。
+3.减少 javascript 文件总量（提升下载速度）。
+```
+
+### 浏览器中的页面循环系统
+
+1.要想在线程运行过程中，能接收并执行新的任务，就需要采用事件循环机制。示例如下：
+
+```c++
+//GetInput
+//等待用户从键盘输入一个数字，并返回该输入的数字
+int GetInput(){
+    int input_number = 0;
+    cout<<"请输入一个数:";
+    cin>>input_number;
+    return input_number;
+}
+
+//主线程(Main Thread)
+void MainThread(){
+    for(;;){
+        int first_num = GetInput()；
+        int second_num = GetInput()；
+        result_num = first_num + second_num;
+        print("最终计算的值为:%d",result_num)；
+    }
+}
+```
+
+2.为了能够接收其它线程（比如资源加载、交互事件、渲染事件、文件读写等）发送的消息，就在上面的事件循环机制上面加上**消息队列**。消息队列是一种数据结构，用来存放要执行的任务。
+
+3.如何退出事件循环呢？很简单，加一个退出标记，每次事件循环的时候判断这个标记，如果有的话就退出循环。
+
+4.为了保证任务的实时性（快速执行，不被消息队列中的任务延误）和效率（不影响当前正在执行的消息队列中的任务），我们把消息队列中的每个任务都加入一个微任务队列，而消息队列中的每个任务被称为宏任务。
+
+5.其实除了有消息队列之外，chrome 还维护了一个延迟队列，用来存放 settimeout 的任务，执行完消息队列中的每个任务之后，就回去判断延迟队列中的任务该不该执行。（所以只有消息队列中的当前正在执行的任务会影响 settimeout 的延迟时间）
+
+6.对于 settimeout 有以下几点需要注意：
+
+```
+1.如果 setTimeout 存在嵌套调用，那么系统会设置最短时间间隔为 4 毫秒
+2.未激活的页面，setTimeout 执行最小间隔是 1000 毫秒
+3.延时执行时间有最大值
+4.使用 setTimeout 设置的回调函数中的 this 不符合直觉
+```
+
+7.使用 xhr 发送 http 请求的 demo：
+
+```js
+function GetWebData(URL){
+    /**
+     * 1:新建XMLHttpRequest请求对象
+     */
+    let xhr = new XMLHttpRequest()
+
+    /**
+     * 2:注册相关事件回调处理函数
+     */
+    xhr.onreadystatechange = function () {
+        switch(xhr.readyState){
+          case 0: //请求未初始化
+            console.log("请求未初始化")
+            break;
+          case 1://OPENED
+            console.log("OPENED")
+            break;
+          case 2://HEADERS_RECEIVED
+            console.log("HEADERS_RECEIVED")
+            break;
+          case 3://LOADING
+            console.log("LOADING")
+            break;
+          case 4://DONE
+            if(this.status == 200||this.status == 304){
+                console.log(this.responseText);
+                }
+            console.log("DONE")
+            break;
+        }
+    }
+
+    xhr.ontimeout = function(e) { console.log('ontimeout') }
+    xhr.onerror = function(e) { console.log('onerror') }
+
+    /**
+     * 3:打开请求
+     */
+    xhr.open('Get', URL, true);//创建一个Get请求,采用异步
+
+
+    /**
+     * 4:配置参数
+     */
+    xhr.timeout = 3000 //设置xhr请求的超时时间
+    xhr.responseType = "text" //设置响应返回的数据格式
+    xhr.setRequestHeader("X_TEST","time.geekbang")
+
+    /**
+     * 5:发送请求
+     */
+    xhr.send();
+}
+```
+
+8.https 混合内容问题：当我们在 https 网站加载 http 的资源，都属于**混合内容**。如果这些内容不是 xhr 加载而是图片 src，视频 src等方式加载的话，浏览器会**显示警告**；但是如果这些内容是 xhr 加载的话，浏览器会**阻挡这些请求**。
+
+9.产生微任务一般有两种方式：使用 MutationObserver 监控某个DOM节点；使用 promise。
+
+10.MutationObserver 使用异步 + 微任务的模式：使用异步解决了同步操作的性能问题；使用微任务解决了实时性的问题。
+
+11.promise 主要是通过下面2点来解决嵌套回调问题的：1.回调函数的延时绑定。（先创建 promise 对象，然后使用executor执行业务逻辑，最后使用then来绑定回调函数）2.将回调函数的返回值穿透到最外层。
+
+12.promise 的好处：1.消灭了嵌套回调。2.更好的信任度，回调函数只会执行一次。3.更好的流程处理。4.更好的错误处理。（可以通过监听 unhandledRejection 来捕获未处理的 promise 错误）
+
+13.生成器是一个带星号的函数，而且是可以暂停执行和恢复执行的。执行生成器代码的函数叫做执行器。（参考著名的 co 框架）
+
+14.协程是比线程更轻量级的存在，它完全受程序所控制，不被操作系统内核管理，也不会像线程切换那样消耗资源。
+
+### 浏览器中的页面
+
+1.根据网络单个请求的时间线面板来做优化：
+
+```
+1.排队过久：域名分片或者升级到 http2.0
+2.第一字节时间（waiting ttfb）过久：服务器生成页面数据的时间过久；网络原因；请求头带上了多余的用户信息
+3.content loading 过久：减少文件大小
+```
+
+2.HTML 解析器是随着 HTML 文档边加载边解析的。
+
+3.javascript 会阻塞 DOM 的解析。（chrome 对此做了优化，使用了预解析；我们可以用 defer、async 关键词等）
+
+4.css 也会影响 DOM 的解析：因为在**执行** javascript 之前，需要等待外部 css 下载完成，并解析生成 cssom 对象之后，所以如果有 javascript 阻塞了 dom 的解析的话，css 就会影响这段 javascript 的执行时间，从而间接影响 dom 的解析。（其它情况下，css 不会影响 dom 的解析）
+
+5.cssom（其实就是```document.styleSheets```）的作用：1.提供给 javascript 操作样式表的能力；2.为布局树的合成提供基础的样式信息。
+
+6.白屏时间主要做了这些操作：**解析 html、下载 css、下载 javascript、生成 cssom、执行 javascript、生成布局树、绘制页面**。所以主要瓶颈在于：**下载 css 文件、下载 javascript 文件和执行 javascript**。缩短白屏时间的方法：
+
+```
+1.内联 css 和 js
+2.减少 css、js 文件大小
+3.将不需要在解析 html 阶段使用的 javascript 加上 defer、async
+4.对于大的 css，使用媒体查询，在特定场景才加载特定的 css
+```
+
+7.对于浏览器中的每一帧，有重排、重绘和合成三种方式，其中合成又分为分层、分块和合成。
+
+8.为了提升每帧的渲染效率，chrome 引入了分层和合成机制，分层会把素材分成多个图层，最后把这些图层合在一起的操作叫做合成。合成操作是在合成线程上完成的，因此不会影响到主线程执行。（分块是指，把全部页面分为几个块来渲染，这样就不会渲染看不见的区域了）
+
+9.will-change 会将元素单独放在一层，大大提升了渲染的效率，这也是 css 动画比 javascript 高效的原因。（由于多了一层，所以内存会增加）
+
+10.通常一个页面有三个阶段：加载阶段、交互阶段和关闭阶段。所以当我们优化一个页面的时候，就从加载阶段和交互阶段入手：
+
+```
+加载阶段：减少关键资源个数、降低关键资源大小、降低关键资源RTT次数或时长
+交互阶段：减少 javascript 脚本执行时间；避免强制同步布局；避免布局抖动（多次强制布局和抖动）；合理使用 css 合成动画；避免频繁的垃圾回收
+```
+
+11.双缓存：一般屏幕会从前缓冲区读取数据并显示，而双缓存是指会先把计算结果存放到另一个缓冲区，等计算结束之后，再一次性复制到前缓冲区。这样图像的输出会非常稳定。其实虚拟 dom 就是类似的这种架构。
+
+12.浏览器的三大进化路线：应用程序 web 化；web 应用移动化；web 操作系统化
+
+13.PWA 是一套理念，渐进式增强 Web 的优势，并通过技术手段渐进式缩短和本地应用程序的差距。
+
+14.Web 应用和本地应用的差距：没有离线能力；缺少消息推送；缺少一级入口。前两个使用 service worker 解决，后一个使用 manifest.json 文件解决。
+
+15.阻碍前端组件化（高内聚，低耦合）的因素：css 会变成全局 css；任何地方都可以直接读取和修改 dom
+
+16.webComponents是一套技术的组合：Custom elements（自定义元素）、Shadow Dom（影子DOM）、Html templates（html模板）。
