feat: add quicksort

--- a/算法篇.md
+++ b/算法篇.md
@@ -155,3 +155,49 @@ function afterOrder(tree) {
     arr.push(root.val);
 }
 ```
+
+### 快速排序
+
+```js
+function quickSort(arr, left, right) {
+  if (left < right) {
+    const pos = partition(arr, left, right)
+    quickSort(arr, left, pos - 1)
+    quickSort(arr, pos + 1, right)
+  }
+  return arr
+}
+
+/**
+ * 找出分界点，使它左边的数都小于它，右边的数都大于等于它
+ */
+function partition(arr, left, right) {
+  const pivot = arr[right]
+  let j = left
+  for (let i = left; i < right; i += 1) {
+    if (arr[i] < pivot) {
+      swap(arr, i, j)
+      j += 1
+    }
+  }
+  swap(arr, j, right)
+  return j
+}
+
+/**
+ * 交换i和j的值
+ */
+function swap(arr, i, j) {
+  const temp = arr[i]
+  arr[i] = arr[j]
+  arr[j] = temp
+}
+```
+
+### 插入排序
+
+```js
+
+```
+
+
