feat: add insertSort

--- a/算法篇.md
+++ b/算法篇.md
@@ -197,7 +197,21 @@ function swap(arr, i, j) {
 ### 插入排序
 
 ```js
+function insertSort(arr) {
+  const len = arr.length
+  for (let i = 1; i < len; i += 1) {
+    const pivot = arr[i]
 
+    let j = i - 1
+    while (j >= 0 && arr[j] > pivot) {
+      arr[j + 1] = arr[j]
+      j -= 1
+    }
+
+    arr[j + 1] = pivot
+  }
+  return arr
+}
 ```
 
 
