feat: 增加最大堆

--- a/算法篇.md
+++ b/算法篇.md
@@ -214,4 +214,71 @@ function insertSort(arr) {
 }
 ```
 
+### 最大堆（数组形式）
+
+```js
+class MaxHeap {
+  constructor(arr) {
+    // arr[0]不使用，从1开始存
+    this.arr = [null]
+    this.len = 0
+
+    for (let i = 0; i < arr.length; i += 1) {
+      this.insert(arr[i])
+    }
+  }
+
+  insert(num) {
+    this.len += 1
+    const { arr, len } = this
+    arr[len] = num
+    this.swim(len)
+  }
+
+  delMax() {
+    const { arr, len } = this
+    const res = arr[1]
+    this.swap(1, len)
+    arr[len] = null
+    this.sink(1)
+    return res
+  }
+
+  sink(k) {
+    const { arr, len } = this
+    while (2 * k <= len) {
+      let child = 2 * k
+      if ((child + 1) <= len && arr[child] < arr[child + 1]) {
+        child += 1
+      }
+
+      if (arr[k] >= arr[child]) {
+        break
+      }
+
+      this.swap(k, child)
+      k = child
+    }
+  }
+
+  swim(k) {
+    const { arr } = this
+    while(k > 1) {
+      let parent = k >> 1
+      if (arr[parent] > arr[k]) {
+        break
+      }
+      this.swap(k, parent)
+      k = parent
+    }
+  }
+
+  swap(i, j) {
+    const temp = this.arr[i]
+    this.arr[i] = this.arr[j]
+    this.arr[j] = temp
+  }
+}
+```
+
 
