--- a/算法篇.md
+++ b/算法篇.md
@@ -281,4 +281,98 @@ class MaxHeap {
 }
 ```
 
+### 最小/小堆（数组形式）
 
+```ts
+class Heap<T = number> {
+  arr: T[]
+  len: number
+  compare: Function
+
+  constructor(arr: T[] | Function = [], type: string | Function = 'max') {
+    // arr[0]不使用，从1开始存
+    this.arr = [null]
+    this.len = 0
+
+    // 兼容第一个参数
+    if (typeof arr === 'string' || typeof arr === 'function') {
+      type = arr
+      arr = []
+    }
+
+    this.compare = typeof type === 'function' ? type : type === 'max' ? this.maxCompare : this.minCompare
+
+    for (let i = 0; i < arr.length; i += 1) {
+      this.insert(arr[i])
+    }
+  }
+
+  maxCompare(i: number, j: number) {
+    return i < j
+  }
+
+  minCompare(i: number, j: number) {
+    return i > j
+  }
+
+  insert(num: T) {
+    this.len += 1
+    const { arr, len } = this
+    arr[len] = num
+    this.swim(len)
+  }
+
+  top() {
+    return this.arr[1]
+  }
+
+  size() {
+    return this.len
+  }
+
+  delTop() {
+    const { arr, len } = this
+    const res = arr[1]
+    this.swap(1, len)
+    arr[len] = null
+    this.len -= 1
+    this.sink(1)
+    return res
+  }
+
+  sink(k: number) {
+    const { arr, len } = this
+    while (2 * k <= len) {
+      let child = 2 * k
+      if (child + 1 <= len && this.compare(arr[child], arr[child + 1])) {
+        child += 1
+      }
+
+      if (this.compare(arr[child], arr[k])) {
+        break
+      }
+
+      this.swap(k, child)
+      k = child
+    }
+  }
+
+  swim(k: number) {
+    const { arr } = this
+    while (k > 1) {
+      let parent = k >> 1
+      if (this.compare(arr[k], arr[parent])) {
+        break
+      }
+      this.swap(k, parent)
+      k = parent
+    }
+  }
+
+  swap(i: number, j: number) {
+    const temp = this.arr[i]
+    this.arr[i] = this.arr[j]
+    this.arr[j] = temp
+  }
+}
+```
