--- a/算法篇.md
+++ b/算法篇.md
@@ -300,7 +300,9 @@ class Heap<T = number> {
       arr = []
     }
 
-    this.compare = typeof type === 'function' ? type : type === 'max' ? this.maxCompare : this.minCompare
+    this.compare = typeof type === 'function'
+      ? this.wrapCompare(type)
+      : type === 'max' ? this.maxCompare : this.minCompare
 
     for (let i = 0; i < arr.length; i += 1) {
       this.insert(arr[i])
@@ -313,6 +315,10 @@ class Heap<T = number> {
 
   minCompare(i: number, j: number) {
     return i > j
+  }
+
+  wrapCompare(compare: Function) {
+    return (i, j) => compare(i, j) > 0
   }
 
   insert(num: T) {
