fix: fix heap type

--- a/算法篇.md
+++ b/算法篇.md
@@ -289,7 +289,7 @@ class Heap<T = number> {
   len: number
   compare: Function
 
-  constructor(arr: T[] | Function = [], type: string | Function = 'max') {
+  constructor(arr: T[] | Function | string = [], type: string | Function = 'max') {
     // arr[0]不使用，从1开始存
     this.arr = [null]
     this.len = 0
