--- a/算法篇.md
+++ b/算法篇.md
@@ -382,3 +382,173 @@ class Heap<T = number> {
   }
 }
 ```
+
+### 区间查询（分段）
+
+```ts
+// 307. 区域和检索 - 数组可修改
+// 执行用时 720 ms，内存消耗：74.7 MB
+class NumArray {
+  block: number
+  list: number[]
+  nums: number[]
+  constructor(nums: number[]) {
+    const block = Math.floor(Math.sqrt(nums.length))
+    const list = Array(block + 1).fill(0)
+    const len = nums.length
+
+    for (let i = 0; i < len; i += 1) {
+      list[Math.floor(i / block)] += nums[i]
+    }
+
+    this.block = block
+    this.list = list
+    this.nums = nums
+  }
+
+  update(index: number, val: number): void {
+    this.list[Math.floor(index / this.block)] += val - this.nums[index]
+    this.nums[index] = val
+  }
+
+  sumRange(left: number, right: number): number {
+    const { nums, list, block } = this
+    let l = left
+    let res = 0
+    while (l <= right) {
+      if ((l % block === 0) && (l + block <= right)) {
+        res += list[Math.floor(l / block)]
+        l += block
+      } else {
+        res += nums[l]
+        l += 1
+      }
+    }
+    return res
+  }
+}
+```
+
+### 区间查询（分段前缀和）
+
+```ts
+// 307. 区域和检索 - 数组可修改
+// 执行用时 744 ms，内存消耗：74 MB
+class NumArray {
+  block: number
+  list: number[][]
+  constructor(nums: number[]) {
+    const block = Math.floor(Math.sqrt(nums.length))
+    const list = []
+    const len = nums.length
+
+    let arr = []
+    let accu = 0
+    for (let i = 0; i < len; i += 1) {
+      accu += nums[i]
+      arr.push(accu)
+      if ((i + 1) % block === 0 || i === len - 1) {
+        list.push(arr)
+        arr = []
+        accu = 0
+      }
+    }
+
+    this.block = block
+    this.list = list
+  }
+
+  update(index: number, val: number): void {
+    const { list, block } = this
+    const blockNum = Math.floor(index / block)
+    const blockList = list[blockNum]
+    const start = index % block
+    const diff = start % block === 0 ? (val - blockList[start]) : (val - blockList[start] + blockList[start - 1])
+    for (let i = start; i < blockList.length; i += 1) {
+      blockList[i] += diff
+    }
+  }
+
+  sumRange(left: number, right: number): number {
+    const { list, block } = this
+    const blockNumLeft = Math.floor(left / block)
+    const blockLeft = list[blockNumLeft]
+    const blockLeftStart = left % block
+    const blockNumRight = Math.floor(right / block)
+    const blockRight = list[blockNumRight]
+    const blockRightStart = right % block
+    let res = 0
+    for (let i = blockNumLeft; i < blockNumRight; i += 1) {
+      const blockList = list[i]
+      res += blockList[blockList.length - 1]
+    }
+    if (blockLeftStart !== 0) {
+      res -= blockLeft[blockLeftStart - 1]
+    }
+    res += blockRight[blockRightStart]
+    return res
+  }
+}
+```
+
+### 区间查询（树状数组）
+
+```ts
+// 307. 区域和检索 - 数组可修改
+// 执行用时 528 ms，内存消耗：74 MB
+class NumArray {
+  block: number
+  list: number[][]
+  constructor(nums: number[]) {
+    const block = Math.floor(Math.sqrt(nums.length))
+    const list = []
+    const len = nums.length
+
+    let arr = []
+    let accu = 0
+    for (let i = 0; i < len; i += 1) {
+      accu += nums[i]
+      arr.push(accu)
+      if ((i + 1) % block === 0 || i === len - 1) {
+        list.push(arr)
+        arr = []
+        accu = 0
+      }
+    }
+
+    this.block = block
+    this.list = list
+  }
+
+  update(index: number, val: number): void {
+    const { list, block } = this
+    const blockNum = Math.floor(index / block)
+    const blockList = list[blockNum]
+    const start = index % block
+    const diff = start % block === 0 ? (val - blockList[start]) : (val - blockList[start] + blockList[start - 1])
+    for (let i = start; i < blockList.length; i += 1) {
+      blockList[i] += diff
+    }
+  }
+
+  sumRange(left: number, right: number): number {
+    const { list, block } = this
+    const blockNumLeft = Math.floor(left / block)
+    const blockLeft = list[blockNumLeft]
+    const blockLeftStart = left % block
+    const blockNumRight = Math.floor(right / block)
+    const blockRight = list[blockNumRight]
+    const blockRightStart = right % block
+    let res = 0
+    for (let i = blockNumLeft; i < blockNumRight; i += 1) {
+      const blockList = list[i]
+      res += blockList[blockList.length - 1]
+    }
+    if (blockLeftStart !== 0) {
+      res -= blockLeft[blockLeftStart - 1]
+    }
+    res += blockRight[blockRightStart]
+    return res
+  }
+}
+```
