--- a/算法篇.md
+++ b/算法篇.md
@@ -552,3 +552,133 @@ class NumArray {
   }
 }
 ```
+
+### 区间查询（数组形式的线段树（自底向上建树））
+
+```ts
+// 307. 区域和检索 - 数组可修改
+// 执行用时 548 ms，内存消耗：75.5 MB
+class NumArray {
+  n: number
+  st: number[]
+  constructor(nums: number[]) {
+    const n = nums.length
+    const st = Array(n * 2).fill(0)
+    for (let i = n; i < n * 2; i += 1) {
+      st[i] = nums[i - n]
+    }
+    for (let i = n - 1; i >= 0; i -= 1) {
+      st[i] = st[i << 1] + st[(i << 1) | 1]
+    }
+    this.n = n
+    this.st = st
+  }
+
+  update(index: number, val: number): void {
+    const { n, st } = this
+    let l = n + index
+    st[l] = val
+    while (l > 0) {
+      st[l >> 1] = st[l] + st[l ^ 1]
+      l >>= 1
+    }
+  }
+
+  sumRange(left: number, right: number): number {
+    const { n, st } = this
+    let l = n + left
+    let r = n + right
+    let res = 0
+    while (l <= r) {
+      if (l & 1) {
+        res += st[l++]
+      }
+      if (!(r & 1)) {
+        res += st[r--]
+      }
+      l >>= 1
+      r >>= 1
+    }
+    return res
+  }
+}
+```
+
+### 区间查询（map形式的线段树（自顶向下建树，无懒标记））
+
+```ts
+// 307. 区域和检索 - 数组可修改
+// 执行用时 904 ms，内存消耗：76.5 MB
+class NumArray {
+  n: number
+  st: Map<number, number>
+  constructor(nums: number[]) {
+    const n = nums.length
+    this.n = n
+    this.st = new Map()
+    this.build(1, 0, n)
+
+    for (let i = 0; i < n; i += 1) {
+      this.update(i, nums[i])
+    }
+  }
+
+  build(index: number, l: number, r: number) {
+    this.st.set(index, 0)
+    if (l < r) {
+      const mid = l + r >> 1
+      this.build(index * 2, l, mid)
+      this.build(index * 2 + 1, mid + 1, r)
+    }
+  }
+
+  // 单点修改
+  updateSt(l: number, r: number, index: number, id: number, val: number) {
+    if (l === r && l === index) {
+      this.st.set(id, val)
+      this.pushUp(id)
+    } else {
+      const mid = l + r >> 1
+      if (index <= mid) {
+        this.updateSt(l, mid, index, id * 2, val)
+      } else {
+        this.updateSt(mid + 1, r, index, id * 2 + 1, val)
+      }
+    }
+  }
+
+  // 更新父节点
+  pushUp(id: number) {
+    const { st } = this
+    let l = id >> 1
+    while (l > 0) {
+      const leftChild = st.get(l * 2) || 0
+      const rightChild = st.get((l * 2 + 1) | 1) || 0
+      st.set(l, leftChild + rightChild)
+      l >>= 1
+    }
+  }
+
+  query(l: number, r: number, id: number, start: number, end: number) {
+    if (l > end || r < start) {
+      return 0
+    }
+    if (l >= start && r <= end) {
+      return this.st.get(id) || 0
+    }
+    const mid = l + r >> 1
+    let res = 0
+    res += this.query(l, mid, id * 2, start, end)
+    res += this.query(mid + 1, r, id * 2 + 1, start, end)
+    return res
+  }
+
+  update(index: number, val: number): void {
+    this.updateSt(0, this.n, index, 1, val)
+  }
+
+  sumRange(left: number, right: number): number {
+    return this.query(0, this.n, 1, left, right)
+  }
+}
+```
