chore: add inverse

--- a/算法篇.md
+++ b/算法篇.md
@@ -383,6 +383,189 @@ class Heap<T = number> {
 }
 ```
 
+### 逆元
+
+1.快速幂法（非bigint版，a过大可能会溢出）
+
+```ts
+// 快速幂法
+// 费马小定理，限制p是一个素数
+function quickPow(a: number, b: number, p: number) {
+  let res = 1
+  a = (a % p + p) % p
+  while (b !== 0) {
+    if (b & 1) {
+      res = (a * res) % p
+    }
+    a = (a * a) % p
+    b >>= 1
+  }
+  return res
+}
+
+function inv(a: number, p: number) {
+  return quickPow(a, p - 2, p)
+}
+```
+
+2.快速幂法（bigint版）
+
+```ts
+// 快速幂法
+// 费马小定理，限制p是一个素数
+function quickPow(a: bigint, b: bigint, p: bigint) {
+  let res = 1n
+  a = (a % p + p) % p
+  while (b !== 0n) {
+    if (b & 1n) {
+      res = (a * res) % p
+    }
+    a = (a * a) % p
+    b >>= 1n
+  }
+  return res
+}
+
+function inv(a: bigint, p: bigint) {
+  return quickPow(a, p - 2n, p)
+}
+```
+
+3.线性求逆元
+
+```ts
+// 从1-n的逆元，限制p是一个素数
+function invList(k: number, p: number) {
+  const list = Array(k + 1).fill(0)
+  list[1] = 1
+  for (let i = 2; i <= k; i += 1) {
+    list[i] = Number((BigInt(p - Math.floor(p / i)) * BigInt(list[p % i])) % BigInt(p))
+  }
+  return list
+}
+```
+
+### 排列数
+
+使用逆元求排列数，注意这里都是 bigint
+
+```ts
+function quickPow(a: bigint, b: bigint, p: bigint) {
+  let res = 1n
+  a = (a % p + p) % p
+  while (b !== 0n) {
+    if (b & 1n) {
+      res = (a * res) % p
+    }
+    a = (a * a) % p
+    b >>= 1n
+  }
+  return res
+}
+
+function inv(a: bigint, p: bigint) {
+  return quickPow(a, p - 2n, p)
+}
+
+// b! / (b - a)!
+function permutation(a: bigint, b: bigint, p: bigint) {
+  if (a > b) {
+    return null
+  }
+
+  return (pow(b, p) * inv(pow(b - a, p), p)) % p
+}
+```
+
+### 组合数
+
+1.直接用逆元求组合数
+
+```ts
+function quickPow(a: bigint, b: bigint, p: bigint) {
+  let res = 1n
+  a = (a % p + p) % p
+  while (b !== 0n) {
+    if (b & 1n) {
+      res = (a * res) % p
+    }
+    a = (a * a) % p
+    b >>= 1n
+  }
+  return res
+}
+
+function inv(a: bigint, p: bigint) {
+  return quickPow(a, p - 2n, p)
+}
+
+function pow(k: bigint, p: bigint) {
+  let res = 1n
+  while (k > 0n) {
+    res = (res * k) % p
+    k -= 1n
+  }
+  return res
+}
+
+// b! / ((b - a)! * a!)
+function combination(a: bigint, b: bigint, p: bigint) {
+  if (a > b) {
+    return null
+  }
+
+  return (pow(b, p) * inv(pow(b - a, p), p) * inv(pow(a, p), p)) % p
+}
+```
+
+2.使用递推式```C(i, k) = (k - i + 1) / i * C(i - 1, k)```求组合数
+
+```ts
+function invList(k: number, p: number) {
+  const list = Array(k + 1).fill(0)
+  list[1] = 1
+  for (let i = 2; i <= k; i += 1) {
+    list[i] = Number((BigInt(p - Math.floor(p / i)) * BigInt(list[p % i])) % BigInt(p))
+  }
+  return list
+}
+
+// C(i, b) = (b - i + 1) / i * C(i - 1, b)
+function combination(a: number, b: number, p: number) {
+  if (a > b) {
+    return null
+  }
+
+  const list = invList(a, p)
+  let res = 1n // C(0, b) = 1
+  for (let i = 1; i <= a; i += 1) {
+    res = (res * BigInt(b - i + 1) * BigInt(list[i])) % BigInt(p)
+  }
+
+  return Number(res)
+}
+```
+
+3.(强烈推荐)使用递推式```C(j, i) = C(j, i - 1) + C(j - 1, i - 1)```求组合数，不需要逆元，也不需要bigint
+
+```ts
+// C(j, i) = C(j, i - 1) + C(j - 1, i - 1)
+function combination(a: number, b: number, p: number) {
+  if (a > b) {
+    return null
+  }
+
+  const mat = Array(b + 1).fill(0).map(() => Array(b + 1).fill(0))
+  for (let i = 0; i <= b; i += 1) {
+    mat[i][0] = 1
+    for (let j = 1; j <= i; j += 1) {
+      mat[i][j] = (mat[i - 1][j] + mat[i - 1][j - 1]) % p
+    }
+  }
+  return mat[b][a]
+}
+```
+
 ### 区间查询（分段）
 
 ```ts
