chore: modify segment tree

--- a/算法篇.md
+++ b/算法篇.md
@@ -736,134 +736,72 @@ class NumArray {
 }
 ```
 
-### 区间查询（数组形式的线段树（自底向上建树））
+### 区间查询（线段树，单点更新）
 
 ```ts
 // 307. 区域和检索 - 数组可修改
-// 执行用时 548 ms，内存消耗：75.5 MB
+// 执行用时 576 ms，内存消耗：75 MB
 class NumArray {
-  n: number
-  st: number[]
+  private readonly tree: number[]
+  readonly nums: number[]
   constructor(nums: number[]) {
-    const n = nums.length
-    const st = Array(n * 2).fill(0)
-    for (let i = n; i < n * 2; i += 1) {
-      st[i] = nums[i - n]
-    }
-    for (let i = n - 1; i >= 0; i -= 1) {
-      st[i] = st[i << 1] + st[(i << 1) | 1]
-    }
-    this.n = n
-    this.st = st
+    const len = nums.length
+    this.tree = Array(len << 2)
+    this.nums = nums
+    this._build(1, 0, len - 1)
   }
 
-  update(index: number, val: number): void {
-    const { n, st } = this
-    let l = n + index
-    st[l] = val
-    while (l > 0) {
-      st[l >> 1] = st[l] + st[l ^ 1]
-      l >>= 1
+  _build(root: number, l: number, r: number): void {
+    if (l === r) {
+      this.tree[root] = this.nums[l]
+      return
     }
+
+    const mid = Math.floor((l + r) / 2)
+    this._build(root << 1, l, mid)
+    this._build((root << 1) | 1, mid + 1, r)
+    this._pushUp(root)
   }
 
-  sumRange(left: number, right: number): number {
-    const { n, st } = this
-    let l = n + left
-    let r = n + right
+  _pushUp(root: number) {
+    this.tree[root] = this.tree[root << 1] + this.tree[(root << 1) | 1]
+  }
+
+  _query(root: number, l: number, r: number, min: number, max: number) {
+    if (min <= l && r <= max) {
+      return this.tree[root]
+    }
+
     let res = 0
-    while (l <= r) {
-      if (l & 1) {
-        res += st[l++]
-      }
-      if (!(r & 1)) {
-        res += st[r--]
-      }
-      l >>= 1
-      r >>= 1
-    }
+    const mid = Math.floor((l + r) / 2)
+    if (min <= mid) res += this._query(root << 1, l, mid, min, max)
+    if (mid + 1 <= max) res += this._query((root << 1) | 1, mid + 1, r, min, max)
     return res
-  }
-}
-```
-
-### 区间查询（map形式的线段树（自顶向下建树，无懒标记））
-
-```ts
-// 307. 区域和检索 - 数组可修改
-// 执行用时 904 ms，内存消耗：76.5 MB
-class NumArray {
-  n: number
-  st: Map<number, number>
-  constructor(nums: number[]) {
-    const n = nums.length
-    this.n = n
-    this.st = new Map()
-    this.build(1, 0, n)
-
-    for (let i = 0; i < n; i += 1) {
-      this.update(i, nums[i])
-    }
-  }
-
-  build(index: number, l: number, r: number) {
-    this.st.set(index, 0)
-    if (l < r) {
-      const mid = l + r >> 1
-      this.build(index * 2, l, mid)
-      this.build(index * 2 + 1, mid + 1, r)
-    }
   }
 
   // 单点修改
-  updateSt(l: number, r: number, index: number, id: number, val: number) {
-    if (l === r && l === index) {
-      this.st.set(id, val)
-      this.pushUp(id)
-    } else {
-      const mid = l + r >> 1
-      if (index <= mid) {
-        this.updateSt(l, mid, index, id * 2, val)
-      } else {
-        this.updateSt(mid + 1, r, index, id * 2 + 1, val)
-      }
+  _updateSingle(root: number, l: number, r: number, p: number, target: number) {
+    if (l === p && p === r) {
+      this.tree[root] = target
+      return
     }
-  }
 
-  // 更新父节点
-  pushUp(id: number) {
-    const { st } = this
-    let l = id >> 1
-    while (l > 0) {
-      const leftChild = st.get(l * 2) || 0
-      const rightChild = st.get((l * 2 + 1) | 1) || 0
-      st.set(l, leftChild + rightChild)
-      l >>= 1
-    }
-  }
-
-  query(l: number, r: number, id: number, start: number, end: number) {
-    if (l > end || r < start) {
-      return 0
-    }
-    if (l >= start && r <= end) {
-      return this.st.get(id) || 0
-    }
-    const mid = l + r >> 1
-    let res = 0
-    res += this.query(l, mid, id * 2, start, end)
-    res += this.query(mid + 1, r, id * 2 + 1, start, end)
-    return res
+    const mid = Math.floor((l + r) / 2)
+    if (p <= mid) this._updateSingle(root << 1, l, mid, p, target)
+    if (mid + 1 <= p) this._updateSingle((root << 1) | 1, mid + 1, r, p, target)
+    this._pushUp(root)
   }
 
   update(index: number, val: number): void {
-    this.updateSt(0, this.n, index, 1, val)
+    this._updateSingle(1, 0, this.nums.length - 1, index, val)
   }
 
   sumRange(left: number, right: number): number {
-    return this.query(0, this.n, 1, left, right)
+    return this._query(1, 0, this.nums.length - 1, left, right)
   }
 }
 ```
 
-### 区间查询（map形式的线段树（自顶向下建树，带懒标记））
+### 区间查询（线段树，范围更新，懒标记）
+
+### 区间查询（线段树，动态建树）
