chore: modify segment tree

--- a/算法篇.md
+++ b/算法篇.md
@@ -743,11 +743,13 @@ class NumArray {
 // 执行用时 576 ms，内存消耗：75 MB
 class NumArray {
   private readonly tree: number[]
+  // private readonly tree: Uint32Array
   readonly nums: number[]
 
   constructor(nums: number[]) {
     const len = nums.length
     this.tree = Array(len << 2)
+    // this.tree = new Uint32Array(len << 2)
     this.nums = nums
     this._build(1, 0, len - 1)
   }
