chore: modify segment tree

--- a/算法篇.md
+++ b/算法篇.md
@@ -745,16 +745,17 @@ class NumArray {
   private readonly tree: number[]
   // private readonly tree: Uint32Array
   readonly nums: number[]
+  readonly size: number
 
   constructor(nums: number[]) {
-    const len = nums.length
-    this.tree = Array(len << 2)
-    // this.tree = new Uint32Array(len << 2)
+    this.size = nums.length
+    this.tree = Array(this.size << 2)
+    // this.tree = new Uint32Array(this.size << 2)
     this.nums = nums
-    this._build(1, 0, len - 1)
+    this._build(1, 0, this.size - 1)
   }
 
-  _build(root: number, l: number, r: number): void {
+  _build(root = 1, l = 0, r = this.size - 1): void {
     if (l === r) {
       this.tree[root] = this.nums[l]
       return
@@ -770,37 +771,37 @@ class NumArray {
     this.tree[root] = this.tree[root << 1] + this.tree[(root << 1) | 1]
   }
 
-  _query(root: number, l: number, r: number, min: number, max: number) {
+  _query(min: number, max: number, l = 0, r = this.size - 1, root = 1) {
     if (min <= l && r <= max) {
       return this.tree[root]
     }
 
     let res = 0
     const mid = Math.floor((l + r) / 2)
-    if (min <= mid) res += this._query(root << 1, l, mid, min, max)
-    if (mid + 1 <= max) res += this._query((root << 1) | 1, mid + 1, r, min, max)
+    if (min <= mid) res += this._query(min, max, l, mid, root << 1)
+    if (mid + 1 <= max) res += this._query(min, max, mid + 1, r, (root << 1) | 1)
     return res
   }
 
   // 单点修改
-  _updateSingle(root: number, l: number, r: number, p: number, target: number) {
+  _updateSingle(p: number, target: number, l = 0, r = this.size - 1, root = 1) {
     if (l === p && p === r) {
       this.tree[root] = target
       return
     }
 
     const mid = Math.floor((l + r) / 2)
-    if (p <= mid) this._updateSingle(root << 1, l, mid, p, target)
-    if (mid + 1 <= p) this._updateSingle((root << 1) | 1, mid + 1, r, p, target)
+    if (p <= mid) this._updateSingle(p, target, l, mid, root << 1)
+    if (mid + 1 <= p) this._updateSingle(p, target, mid + 1, r, (root << 1) | 1)
     this._pushUp(root)
   }
 
   update(index: number, val: number): void {
-    this._updateSingle(1, 0, this.nums.length - 1, index, val)
+    this._updateSingle(index, val)
   }
 
   sumRange(left: number, right: number): number {
-    return this._query(1, 0, this.nums.length - 1, left, right)
+    return this._query(left, right)
   }
 }
 ```
