chore: modify segment tree

--- a/算法篇.md
+++ b/算法篇.md
@@ -738,70 +738,82 @@ class NumArray {
 
 ### 区间查询（线段树，单点更新）
 
+线段树其实是一个特殊的数组，它支持按索引单点更新和范围更新，也支持按索引单点查询和范围查询。记住我们按的是索引，而不是值。所以任何按索引操作的数组，都可以用线段树解决。
+
 ```ts
 // 307. 区域和检索 - 数组可修改
 // 执行用时 576 ms，内存消耗：75 MB
-class NumArray {
+class SegmentTree {
+  readonly size: number
+  readonly nums: number[]
   private readonly tree: number[]
   // private readonly tree: Uint32Array
-  readonly nums: number[]
-  readonly size: number
 
   constructor(nums: number[]) {
     this.size = nums.length
+    this.nums = nums
     this.tree = Array(this.size << 2)
     // this.tree = new Uint32Array(this.size << 2)
-    this.nums = nums
-    this._build(1, 0, this.size - 1)
+    this.build(1, 0, this.size - 1)
   }
 
-  _build(root = 1, l = 0, r = this.size - 1): void {
+  build(root = 1, l = 0, r = this.size - 1): void {
     if (l === r) {
       this.tree[root] = this.nums[l]
       return
     }
 
     const mid = Math.floor((l + r) / 2)
-    this._build(root << 1, l, mid)
-    this._build((root << 1) | 1, mid + 1, r)
-    this._pushUp(root)
-  }
-
-  _pushUp(root: number) {
-    this.tree[root] = this.tree[root << 1] + this.tree[(root << 1) | 1]
-  }
-
-  _query(min: number, max: number, l = 0, r = this.size - 1, root = 1) {
-    if (min <= l && r <= max) {
-      return this.tree[root]
-    }
-
-    let res = 0
-    const mid = Math.floor((l + r) / 2)
-    if (min <= mid) res += this._query(min, max, l, mid, root << 1)
-    if (mid + 1 <= max) res += this._query(min, max, mid + 1, r, (root << 1) | 1)
-    return res
+    this.build(root << 1, l, mid)
+    this.build((root << 1) | 1, mid + 1, r)
+    this.pushUp(root)
   }
 
   // 单点修改
-  _updateSingle(p: number, target: number, l = 0, r = this.size - 1, root = 1) {
+  updateSingle(p: number, target: number, l = 0, r = this.size - 1, root = 1) {
     if (l === p && p === r) {
       this.tree[root] = target
       return
     }
 
     const mid = Math.floor((l + r) / 2)
-    if (p <= mid) this._updateSingle(p, target, l, mid, root << 1)
-    if (mid + 1 <= p) this._updateSingle(p, target, mid + 1, r, (root << 1) | 1)
-    this._pushUp(root)
+    if (p <= mid) this.updateSingle(p, target, l, mid, root << 1)
+    if (mid + 1 <= p) this.updateSingle(p, target, mid + 1, r, (root << 1) | 1)
+    this.pushUp(root)
+  }
+
+  pushUp(root: number) {
+    // 更新策略
+    this.tree[root] = this.tree[root << 1] + this.tree[(root << 1) | 1]
+  }
+
+  query(min: number, max: number, l = 0, r = this.size - 1, root = 1) {
+    if (min <= l && r <= max) {
+      return this.tree[root]
+    }
+
+    let res = 0
+    const mid = Math.floor((l + r) / 2)
+    // 查询策略
+    if (min <= mid) res += this.query(min, max, l, mid, root << 1)
+    if (mid + 1 <= max) res += this.query(min, max, mid + 1, r, (root << 1) | 1)
+    return res
+  }
+}
+
+class NumArray {
+  tree: SegmentTree
+
+  constructor(nums: number[]) {
+    this.tree = new SegmentTree(nums)
   }
 
   update(index: number, val: number): void {
-    this._updateSingle(index, val)
+    this.tree.updateSingle(index, val)
   }
 
   sumRange(left: number, right: number): number {
-    return this._query(left, right)
+    return this.tree.query(left, right)
   }
 }
 ```
