--- a/算法篇.md
+++ b/算法篇.md
@@ -821,3 +821,59 @@ class NumArray {
 ### 区间查询（线段树，范围更新，懒标记）
 
 ### 区间查询（线段树，动态建树）
+
+
+### KMP 算法
+
+```ts
+function buildNext(p: string) {
+  const len = p.length
+  const res = [0]
+  let x = 1
+  let now = 0
+  while (x < len) {
+    if (p[x] === p[now]) {
+      x += 1
+      now += 1
+      res.push(now)
+    } else if (now > 0) {
+      now = res[now - 1]
+    } else {
+      res.push(0)
+      x += 1
+    }
+  }
+  return res
+}
+
+function kmpSearch(s: string, p: string, showAll = false) {
+  const next = buildNext(p)
+  const res: number[] = []
+
+  let tar = 0
+  let pos = 0
+  while (tar < s.length) {
+    if (s[tar] === p[pos]) {
+      tar += 1
+      pos += 1
+    } else if (pos > 0) {
+      pos = next[pos - 1]
+    } else {
+      tar += 1
+    }
+
+    if (pos === p.length) {
+      if (!showAll) {
+        return tar - pos
+      }
+
+      res.push(tar - pos)
+      pos = next[pos - 1]
+    }
+  }
+
+  return res
+}
+
+console.log(kmpSearch('abcdfabcfgabc', 'abc', true))
+```
