chore: modify blog

--- a/博客/《谈判：如何在博弈中获得更多》读后感.md
+++ b/博客/《谈判：如何在博弈中获得更多》读后感.md
@@ -16,4 +16,14 @@
 
 那么这种场景应该怎么办呢？
 
-###
+### 绝不让步，除非交换
+
+>> 谈判是我们从想要我们东西的人那里获得我们想要的东西的过程。
+
+谈判并不是直接答应想要我们东西的人的请求，而应该思考或者提出，我们想要从他们那里获取什么东西。
+
+比如我们在工作中，产品加了一个需求，如果你直接默不作声的加班做了，那么你就是一个冤大头。你应该想一下你要从产品那里获取什么东西？如果时间不够，你可以要求更多的排期。如果产品经常提需求又不更新文档，你可以要求产品把新需求写进文档里面。如果你确实有时间做，你也可以说明一下有时间，证明你确实是思考过时间的，为以后时间不够要求排期打下基础。
+
+从另一个侧面来看，一般好的产品通常在加完需求之后会请程序员喝奶茶什么的。因为她们深知交换的重要性，她们知道提新需求之后自己应该付出点什么。那些贪得无厌的产品一般不会请程序员喝奶茶，因为她们觉得这是天经地义的事。从这里也可以看出怎么分辨一个产品的好坏。
+
+
