chore: modify blog

--- a/博客/《谈判：如何在博弈中获得更多》读后感.md
+++ b/博客/《谈判：如何在博弈中获得更多》读后感.md
@@ -20,10 +20,24 @@
 
 >> 谈判是我们从想要我们东西的人那里获得我们想要的东西的过程。
 
-谈判并不是直接答应想要我们东西的人的请求，而应该思考或者提出，我们想要从他们那里获取什么东西。
+我们在工作中，经常会遇到一些要我们东西的时刻，很多时候我们都直接把这个东西无偿或者友情给别人了，甚至不惜损伤自己的利益。但是更好的方式是，思考我们想要从别人那里拿什么东西作为交换，然后来谈判。
 
-比如我们在工作中，产品加了一个需求，如果你直接默不作声的加班做了，那么你就是一个冤大头。你应该想一下你要从产品那里获取什么东西？如果时间不够，你可以要求更多的排期。如果产品经常提需求又不更新文档，你可以要求产品把新需求写进文档里面。如果你确实有时间做，你也可以说明一下有时间，证明你确实是思考过时间的，为以后时间不够要求排期打下基础。
+比如产品加了需求，如果你都默不作声的加班做了，那么你就是一个冤大头。你应该想一下你要从产品那里获取什么东西？如果时间不够，你可以要求更多的排期。如果产品经常提需求又不更新文档，你可以趁这个时候要求产品把新需求写进文档里面。如果你确实有时间做，你也可以说明一下有时间，证明你确实是思考过时间的，为以后时间不够而要求更多的排期打下基础。甚至你可以把你之前想让产品做的事提出来作为交换。
 
-从另一个侧面来看，一般好的产品通常在加完需求之后会请程序员喝奶茶什么的。因为她们深知交换的重要性，她们知道提新需求之后自己应该付出点什么。那些贪得无厌的产品一般不会请程序员喝奶茶，因为她们觉得这是天经地义的事。从这里也可以看出怎么分辨一个产品的好坏。
+从另一个方面来看，一个好的产品通常在加完很多需求之后会请程序员喝点奶茶什么的。因为她们深知交换的重要性，她们知道提新需求之后自己应该付出点什么。而那些贪得无厌的产品一般很少请程序员喝奶茶，因为她们觉得这是天经地义的事。从这里也可以看出怎么分辨一个产品的好坏。
+
+### 不要只是抱怨，去谈判
+
+>> 当出现始料未及的事情时，每个人都想着通过抱怨来占得上风，抱怨自己的不满被对方轻视，抱怨自己遭受了不公正的待遇。但是，我们没有想清楚的是，除了抱怨还能做什么。我们其实更应该专注于与争议问题相关的现实选择。如果这道菜变质了，那这就是问题所在，不要纠结你进来时没受到应有的欢迎，或者前台没有妥善保管你的外套之类的问题。如果你的爱人迟到了，那这就是问题所在，不要去扯他/她的妈妈又怎么了，或者去年他/她忘了周年纪念日，等等。
+
+人都是善于挑刺的，和别人合作久了，肯定会有抱怨的时候。但更好的方式是，专注于问题所在，然后去谈判。
+
+比如产品不断提出新需求，我们就会抱怨这个产品很差；当测试不断反复问一些技术细节的时候，我们经常会抱怨这个测试没有记住你说的话。其实更好的办法是专注于问题所在。
+
+如果产品提出新需求，那么问题是什么？是排期不够？还是技术实现有难度？或者我们觉得这个需求完全没必要做？如果排期不够，那么去和项目经理反馈增加排期；如果技术实现有难度，那么多想想怎么实现或者找熟悉的人寻求帮助；如果我们觉得这个需求完全没必要做，那么去了解这个需求背后的深层次原因。
+
+如果测试不断反复问一些技术细节，那么问题又是什么？是测试每次都会来打断我的工作？那么让测试把不重要也不紧急的问题积累多了再来问。是测试记住技术细节？为什么测试记不住技术细节呢？是没有更新文档吗？那么及时更新技术文档就好了。
+
+
 
 
